versioned_docs/version-6.5.0/api/combine.mdx
---
title: combine
---

import * as turf from "turf-6";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Combines a [FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) of [Point](https://tools.ietf.org/html/rfc7946#section-3.1.2), [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4), or [Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) features
into [MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3), [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5), or [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7) features.

### Parameters

| Name | Type                                                                                                                                                                                                                                                                     | Description                     |
| ---- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------- |
| fc   | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2) \| [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) \| [Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6)>** | a FeatureCollection of any type |

### Returns

<ul>
  **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)\<[MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3) \| [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5) \| [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)>** a FeatureCollection of corresponding type to input

</ul>

### Examples

```javascript
var fc = turf.featureCollection([
  turf.point([19.026432, 47.49134]),
  turf.point([19.074497, 47.509548]),
]);

var combined = turf.combine(fc);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var fc = turf.featureCollection([
    turf.point([19.026432, 47.49134]),
    turf.point([19.074497, 47.509548]),
  ]);

  var combined = turf.combine(fc);

  //addToMap
  var addToMap = { combined };
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/combine

import { combine } from "@turf/combine";
const result = combine(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.combine(...);
```
