versioned_docs/version-7.4.0/api/combine.mdx
---
title: combine
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

export function Map0() {
  "use strict";
  // No blank lines so MDX parses code block as a single "export" node.
  // jsdoc example start
  var fc = turf.featureCollection([
    turf.point([19.026432, 47.49134]),
    turf.point([19.074497, 47.509548]),
  ]);
  var combined = turf.combine(fc);
  //addToMap
  var addToMap = { combined };
  // jsdoc example end
  return <ExampleMap addToMap={addToMap} />;
}

### Description

Combines a [FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3) of [Point](https://tools.ietf.org/html/rfc7946#section-3.1.2), [MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3), [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4),
[MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5), [Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6), or [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7) features
into [MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3), [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5), or [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7) features.

### Parameters

| Name | Type                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Description                                                                                           |
| ---- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------- |
| fc   | **[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2) &#124; [MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3) &#124; [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) &#124; [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5) &#124; [Polygon](https://tools.ietf.org/html/rfc7946#section-3.1.6) &#124; [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)&gt;** | a FeatureCollection of Points, MultiPoints, LineStrings, MultiLineStrings, Polygons, or MultiPolygons |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[MultiPoint](https://tools.ietf.org/html/rfc7946#section-3.1.3) &#124; [MultiLineString](https://tools.ietf.org/html/rfc7946#section-3.1.5) &#124; [MultiPolygon](https://tools.ietf.org/html/rfc7946#section-3.1.7)&gt;** a FeatureCollection of corresponding type to input

### Examples

```javascript
var fc = turf.featureCollection([
  turf.point([19.026432, 47.49134]),
  turf.point([19.074497, 47.509548]),
]);

var combined = turf.combine(fc);
```

<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/combine

import { combine } from "@turf/combine";
const result = combine(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.combine(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
